# rust-vault

./: .gitignore
server/: .env  Cargo.toml
server/migrations/2022-04-16-155639_users/: up.sql
server/migrations/2022-04-17-133348_texts/: down.sql  up.sql
server/migrations/2022-04-18-143000_texts/: up.sql
server/src/: config.rs  lib.rs  main.rs
server/src/models/: mod.rs  secret.rs  text.rs  user.rs
server/src/routes/: authentication.rs  files.rs  mod.rs  secret.rs  static_html.rs
server/src/structs/: app_state.rs
server/src/utils/: db.rs  mod.rs  session_utils.rs  verify.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  main.rs
web/src/components/: home.rs
web/src/utils/: mod.rs  route_handler.rs
web/static/: home.html  index.html  login.html  signup.html  upload.html
