[package]
name = "server"
version = "1.0.0"
edition = "2021"

[dependencies]
log = "0.4.0"
actix-web = "4.0.1"
actix-session = { version = "0.6.2", features = ["redis-actor-session"] }
env_logger = "0.9.0"
http = "0.2.6"
serde = { version = "1.0.136", features = ["derive"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenvy = "0.15.1"
argon2 = "0.4.0"
actix-files = "0.6.0"
